--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Calculo de rotas",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "bower install"
   },
   "author": "Felipe Andrade",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "bower": "^1.7.7",
     "express": "^4.13.4",
     "express-load": "^1.1.15",
     "request-promise": "^2.0.0"
